# music-generator

./: .gitignore  pyproject.toml
music_generator/data/: preprocessing.py
music_generator/model/: attention.py
notebook/: sandbox.ipynb
tests/: test_music_generator.py
