[tool.poetry]
name = "music-generator"
version = "0.1.0"
description = ""
authors = ["adtak <adtak>"]

[tool.poetry.dependencies]
python = "^3.8"
music21 = "^7.1.0"
ipykernel = "^6.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.2"
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
